--- a/src/components/AdvanceSearch.css
+++ b/src/components/AdvanceSearch.css
@@ -1,5 +1,5 @@
 .advanceSearch {
-  position: absolute;
+  position: fixed;
   width: 100%;
   height: 100%;
   background-color: #000000d7;
@@ -7,6 +7,7 @@
   justify-content: center;
   align-items: center;
   z-index: 10;
+  animation: slideFromBottom 0.8s;
 }
 
 .searchField {
@@ -24,7 +25,6 @@
   flex-direction: column;
   width: 60%;
   height: 90%;
-  /* font-size: 20px; */
 }
 
 .searchField--fill {
@@ -36,6 +36,11 @@
   font-size: 20px;
 }
 
+.searchField--information {
+  font-size: 15px;
+  color: red;
+}
+
 .searchField--fill::placeholder {
   display: flex;
   align-items: center;
@@ -44,11 +49,11 @@
   font-size: 20px;
 }
 
-.searchField--submit{
-  color:white;
+.searchField--submit {
+  color: white;
   background-color: inherit;
   cursor: pointer;
-  border:none;
+  border: none;
 }
 
 .exitSign {
@@ -56,4 +61,11 @@
   right: 10px;
   top: 10px;
   color: white;
+  cursor: pointer;
+}
+
+@keyframes slideFromBottom {
+  0% {top: 100vh;}
+  100%   {top: 0px;}
+  
 }
